# bcr-court

./: Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yml  justfile
.github/workflows/: deploy-test.yml  deploy.yml  publish-test.yml  publish.yml
config/: config.toml
src/: main.rs
src/db/: mod.rs  shared_bill.rs  shared_bills.rs  user.rs
src/web/: csrf.rs  error.rs  mod.rs  rate_limit.rs  session.rs
src/web/bill/: data.rs  mod.rs  rest.rs  ssr.rs
src/web/templates/: mod.rs
src/web/user/: data.rs  mod.rs
static/: style.css
templates/: _footer.html  _header.html  base.html  bill.html  bills.html  error.html  home.html  user_create_keyset.html  user_keyset.html  user_login.html
