[package]
name = "bcr-court"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tracing = { version = "0.1" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
tokio = { version = "1", features = ["signal", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
config = { version = "0.15" }
anyhow = { version = "1" }
axum = { version = "0.8", features = ["macros"] }
askama = "0.14"
tower-http = { version = "0.6", features = ["cors", "fs"] }
thiserror = { version = "2" }
async-trait = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
chrono = "0.4"
rand = "0.9"
futures = {version = "0.3"}
deadpool-postgres = "0.14"
bitcoin = { version = "0.32", default-features = false, features = ["serde"] }
borsh = "1.5"
borsh-derive = "1.5"
url = { version = "2.5" }
reqwest = { version = "0.12", features = ["default", "stream"] }
infer = { version = "0.19.0", default-features = false }
uuid = { version = "1.18.1", features = ["v4"] }
bcr-ebill-core = { git = "https://github.com/BitcreditProtocol/Bitcredit-Core.git", tag = "v0.4.8" }
tower-sessions= { version = "0.14" }
tower-sessions-core = { version = "0.14", features = ["deletion-task"] }
